syntax = "proto3";

option csharp_namespace = "DiscountGRPC.Protos";

service DiscountService
{
	rpc GetDiscountedProduct (DiscountRequest) returns (DiscountResponse);
	rpc AddDiscountedProduct (AddDiscountRequest) returns (DiscountResponse);
    rpc UpdateDiscountedProduct (UpdateDiscountRequest) returns (DiscountResponse);
	rpc DeleteDiscountedProduct (DiscountRequest) returns (DiscountResponse);
}

message DiscountRequest 
{
	string ProductName=1;
}
message AddDiscountRequest
{
	string ProductName=1;
	string Description=2;
    float DiscountedPrice=3;
}
message UpdateDiscountRequest
{
	string ProductName=1;
	string Description=2;
    float DiscountedPrice=3;
}
message DiscountResponse
{
	int32 id=1;
	string ProductName=2;
	string Description=3;
    float DiscountedPrice=4;
}
message Response
{
	string Message=1;
}